--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: "An Adventure Mod"
 domain: antrakasus.github.io
 url: https://antrakasus.github.io
-baseurl: /Proof Of Concept.html  
+baseurl: /Proof of Concept.html  
