--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 title: "An Adventure Mod"
 domain: antrakasus.github.io
-url: https://antrakasus.github.io
-baseurl: /Proof of Concept.html  
+url: https://antrakasus.github.io/Proof of Concept.html
